--- a/style.css
+++ b/style.css
@@ -3,28 +3,32 @@ body {
     background-size: cover;
 }
 
+.dark-mode {
+    background-image: url( );
+    color: black;
+}
 nav {
     font-size: larger;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 h3 {
-    font-family: 'Courier New', Courier, monospace;
-    color: rgb(252, 179, 148);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
 }
 
 h2 {
     font-family: cursive;
-    color: whitesmoke;
 }
 
 p {
     font-family: 'Times New Roman', Times, serif;
-    color: rgb(25, 14, 14);
 }
 
-.article {
+.article p{
     font-style: italic;
+    text-align: center;
+    cursor: pointer;
 }
 
 section {
@@ -32,4 +36,27 @@ section {
     padding: 1em;
     margin-bottom: 10px;
     border-radius: 10px;
+}
+
+.article p:hover {
+    transform: scale(1.1); 
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.home {
+    transition: color 0.3s ease;
+  }
+  .detel:hover {
+    color: #fff; /* Ubah warna teks saat hover */
+  }
+
+.home{
+    margin-bottom:100%;
+    margin-top: 50px;
+    font-size: 20px;
+}
+
+.home h2{
+    font-size: 30px;
+    color: #212121; 
 }
